--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ footer {
 }
 
 body {
-  background-image: url(/assets/img/cafefondo.png);
+  background-image: url(..png/assets/img/cafefondo.png);
 }
 
 form {
