--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,4 +1,5 @@
 .contacto{
+    background-image: url(/assets/img/cafefondo.png);
     font-family: garamond;
     &Inicio{
         text-align: center;
