--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,6 +1,6 @@
-
 .inicio{
     font-family: garamond;
+    background-color: gainsboro;
     &Titulo {
         padding: 2rem;
         text-align: center;
