--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,4 +1,5 @@
 .nosotros{
+    background-image: url(/assets/img/cafefondo.png);
     font-family: garamond;
     &Inicio{
         padding-top: 2rem;
