--- a/css/styles.css
+++ b/css/styles.css
@@ -1,51 +1,3 @@
-footer {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  background-color: black;
-}
-
-.footerInicio {
-  text-align: center;
-  color: gainsboro;
-}
-
-.navbarFont {
-  font-family: garamond;
-  color: gray;
-}
-
-form {
-  width: 450px;
-  margin: auto;
-  margin-bottom: 5rem;
-  background-color: black;
-  padding: 30px 30px;
-  box-sizing: border-box;
-  border-radius: 20px;
-}
-
-.tituloForms {
-  color: gainsboro;
-  text-align: center;
-  margin: 0;
-  font-size: 30px;
-  margin-bottom: 20px;
-}
-
-input, textarea {
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 7px;
-  box-sizing: border-box;
-  font-size: 18px;
-}
-
-textarea {
-  min-height: 100px;
-  max-height: 300px;
-  max-width: 100%;
-}
-
 .button {
   border: 2px solid gainsboro;
   background-color: gainsboro;
@@ -125,6 +77,54 @@ textarea {
   margin-top: 10px;
 }
 
+footer {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: black;
+}
+
+.footerInicio {
+  text-align: center;
+  color: gainsboro;
+}
+
+.navbarFont {
+  font-family: garamond;
+  color: gray;
+}
+
+form {
+  width: 450px;
+  margin: auto;
+  margin-bottom: 5rem;
+  background-color: black;
+  padding: 30px 30px;
+  box-sizing: border-box;
+  border-radius: 20px;
+}
+
+.tituloForms {
+  color: gainsboro;
+  text-align: center;
+  margin: 0;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+input, textarea {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 7px;
+  box-sizing: border-box;
+  font-size: 18px;
+}
+
+textarea {
+  min-height: 100px;
+  max-height: 300px;
+  max-width: 100%;
+}
+
 .inicio {
   font-family: garamond;
   background-color: gainsboro;
@@ -176,6 +176,7 @@ textarea {
 
 .panaderia {
   background-color: gainsboro;
+  overflow: hidden;
   font-family: garamond;
 }
 .panaderiaInicio {
@@ -213,7 +214,8 @@ textarea {
 }
 
 .nosotros {
-  background-image: url(/assets/img/cafefondo.png);
+  background-color: gainsboro;
+  overflow: hidden;
   font-family: garamond;
 }
 .nosotrosInicio {
@@ -228,7 +230,7 @@ textarea {
 }
 
 .contacto {
-  background-image: url(/assets/img/cafefondo.png);
+  background-color: gainsboro;
   font-family: garamond;
 }
 .contactoInicio {
