--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,5 +1,6 @@
 .nosotros{
-    background-image: url(/assets/img/cafefondo.png);
+    background-color: gainsboro;
+    overflow: hidden;
     font-family: garamond;
     &Inicio{
         padding-top: 2rem;
