--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,11 @@ textarea {
   max-width: 100%;
 }
 
+@media (max-width: 480px) {
+  form {
+    width: 100%;
+  }
+}
 .inicio {
   font-family: garamond;
   background-color: gainsboro;
