--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,11 @@ textarea {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+.nosotrosImg {
+  width: 100%;
+  border-radius: 15px;
+  box-shadow: 0px 3px 5px;
+}
 
 .contacto {
   background-color: gainsboro;
