--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -12,4 +12,9 @@
         padding-top: 20px;
         padding-bottom: 20px;
     }
+    &Img{
+        width: 100%;
+        border-radius: 15px;
+        box-shadow: 0px 3px 5px ;
+    }
 }
