--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -8,3 +8,11 @@ footer{
     text-align: center;
     color: gainsboro;
 }
+.footerTitulo{
+margin: 1rem;
+margin-bottom: 2rem;
+}
+.footerSubtitulo{
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
