--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -3,7 +3,8 @@
     overflow: hidden;
     font-family: garamond;
     &Inicio{
-        padding-top: 2rem;
+        padding-top: 3rem;
+        padding-bottom: 2rem;
         text-align: center;
     }
     &Parrafo{
