--- a/scss/pages/_panaderia.scss
+++ b/scss/pages/_panaderia.scss
@@ -4,7 +4,8 @@
     font-family: garamond;
 
     &Inicio{
-        padding-top: 2rem;
+        padding-top: 3rem;
+        padding-bottom: 2rem;
         text-align: center;
     }
     &Parrafo{
@@ -12,6 +13,7 @@
         font-size: 20px;
         padding-left: 5rem;
         padding-right: 5rem;
+        padding-bottom: 2rem;
     }
     &Info{
         text-align: center;
