--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,9 +1,11 @@
 .contacto{
     background-color: gainsboro;
+    background-image: url(/assets/img/cafefondo.png);
     font-family: garamond;
     &Inicio{
         text-align: center;
-        padding-top: 2rem;
+        padding-top: 3rem;
+        padding-bottom: 2rem;
     }
     &Parrafo{
         text-align: center;
