--- a/scss/pages/_tienda.scss
+++ b/scss/pages/_tienda.scss
@@ -2,11 +2,13 @@
     background-color: gainsboro;
     font-family: garamond;
     &Inicio{
-        padding-top: 2rem;
+        padding-top: 3rem;
+        padding-bottom: 2rem;
         text-align: center;
     }
     &Parrafo{
         text-align: center;
         font-size: 20px;
+        padding-bottom: 2rem;
     }
 }
