--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,5 +1,6 @@
 .inicio{
     font-family: garamond;
+    background-image: url(../img/cafefondo.png);
     background-color: gainsboro;
     &Titulo {
         padding: 3rem;
