--- a/scss/pages/_panaderia.scss
+++ b/scss/pages/_panaderia.scss
@@ -1,4 +1,5 @@
 .panaderia{
+    background-image: url(../img/cafefondo.png);
     background-color: gainsboro;
     overflow: hidden;
     font-family: garamond;
