--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,6 +1,6 @@
 .contacto{
     background-color: gainsboro;
-    background-image: url(/assets/img/cafefondo.png);
+    background-image: url(../img/cafefondo.png);
     font-family: garamond;
     &Inicio{
         text-align: center;
