--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,4 +1,5 @@
 .nosotros{
+    background-image: url(../img/cafefondo.png);
     background-color: gainsboro;
     overflow: hidden;
     font-family: garamond;
