--- a/scss/pages/_tienda.scss
+++ b/scss/pages/_tienda.scss
@@ -1,4 +1,5 @@
 .tienda{
+    background-image: url(../img/cafefondo.png);
     background-color: gainsboro;
     font-family: garamond;
     &Inicio{
